--- a/doc/db/1.基础/3.索引.md
+++ b/doc/db/1.基础/3.索引.md
@@ -10,7 +10,7 @@
 ### 索引优化
 1. 覆盖索引 （查询的条件及值都在索引上不需要回表————但是就会加大索引的大小需要权衡）—— Using index
 2. 最左前缀原则 (可以减少索引的创建，当有一个索引(A,B),此时需要索引(A,B,C)是，就可以只保留索引(A,B,C))
-3. 索引下推 (尽可能在索引上进行判断减少回表的机会)
+3. 索引下推 (尽可能在innodb上进行判断减少返回server的机会)
 
 ### 索引的选择
 1. 普通索引不用校验唯一性，所以修改/新增时不用校验唯一性。可以借助change buffer优化(减少随机读问题)
