--- a/doc/microservices/流量治理_限流.md
+++ b/doc/microservices/流量治理_限流.md
@@ -7,6 +7,7 @@
     - [熔断和降级之间的联系与差别](#熔断和降级之间的联系与差别)
 - [限流](#限流)
     - [如何处理](#如何处理)
+- [总结](#总结)
 
 ---
 
@@ -82,3 +83,10 @@
     固定窗口：一个时间段给出一定的数量，如果数量为0则获取不到，与令牌桶类似，但是是以固定时间为维度，如果上一个时间段还没处理完就过下一个窗口就会比较麻烦（是否能从 i-- >= 0拿数据）
     滑动窗口：当前时间往前推设定的时间，算出这个时间段的队列数量，如果小于设定值就获取成功，否则失败。平滑流量并避免突发大流量对服务接口的影响 
 ```
+
+## 总结
+1. 超时：当对下游服务请求未做超时处理时，假如默认超时时间为60s，此时有1000个请求，此时大量的请求阻塞占用连接数及系统资源导致系统不可用。应该合理的控制超时时间（如默认值5s，可通过配置或参数变动）
+2. 重试：超时可能是部分服务器的故障，此时可以考虑重试机制或直接失败等容错机制。看需要考虑重试的间隔时间，重试的次数等。避免重试风暴
+3. 熔断：知道下游的服务有问题时依旧还对下游的服务调用会加大下游服务的压力，同时当前服务也可能会受到影响。所以下游服务有问题次数超过阈值时，就应该不调用返回错误。
+4. 降级：每次熔断错误都直接返回错误可能不太好，部分接口对于下游熔断错误不敏感的接口。可以返回一些默认值或是其他的值用户体验更好
+5. 限流: 某个接口调用次数较大，避免恶意请求或避免服务/接口不可用。拒绝一部分请求
