--- a/doc/db/2.应用/2.连表JOIN.md
+++ b/doc/db/2.应用/2.连表JOIN.md
@@ -1,7 +1,11 @@
 ## Nested Loop Join,Block Nested Loop Join（使用join_buffer版本的Nested Loop Join）
 * 应该用小表作为驱动表
 * Nested Loop Join: 取驱动表的每一行，去驱动表关联的被驱动表中查询(O(N))，然后和驱动表组成一行放到结果集，以此类推，直到最后一个驱动表，最后返回结果。
+  * Index Nested Loop Join: 被驱动表使用了索引，无借助join buffer优化
+  * Simple Nested Loop Join: 被驱动表没有使用索引 （mysql优化成以下的Block Nested Loop Join）
+  * `Batched Key Access` 是对Index Nested Loop Join 的一个优化，`驱动表`中读取的数据放入join_buffer中排序后去被驱动表获取(有序搜索)
 * Block Nested Loop Join:`驱动表`加载到`join buffer`中，然后扫描被驱动表，把`被驱动表`中每一行和join_buffer中的行进行比较
+  * 驱动表的数据加到`join buffer`中，如果驱动表数据大放不下，会先放一部分后去`被驱动表`对比后清空，然后再把驱动表的数据加到`join buffer`.这样`被驱动表`扫描消耗也很大
 * SELECT * FROM t2 join t1 on t1.id=t2.id 驱动表不一定是左边的表（根据效率更高的为驱动表），如果强制则使用`STRAIGHT_JOIN`。
 * LEFT JOIN时语义上驱动表是左表。大概率是LEFT但不保证一定(这取决于查询条件、表的大小、索引的使用情况和优化器的决策)
 
@@ -13,8 +17,9 @@
 
 
 ## join_buffer
-如果被驱动表`没有符合索引`，此时需要全表扫描，很大概率会到磁盘里面读取，那可以把`被驱动表`的数据放到join_buffer中减少多次读磁盘的次数
-* 应该用大表作为驱动表
+如果被驱动表`没有符合索引`，此时需要全表扫描，很大概率会到磁盘里面读取，那可以把`驱动表`的数据放到join_buffer中减少多次读磁盘的次数
+* 如果被驱动表没有索引也没有join buffer时，就需要驱动表拿一行，去驱动表扫描全表，以此类推被驱动表就会扫描很多次
+* 如果被驱动表没有索引有join buffer时，那么就把驱动表的数据放到join buffer中，被驱动表只要扫描一次。（前提是join buffer能放下驱动表全部，如果驱动表需要放下N次，那么被驱动表就要全表扫描N次）
 
 
 ## hash join(8.0版本)
@@ -22,14 +27,14 @@
 
 
 ## join是否改为应用层实现分析
-* 如果被驱动表数据量小时可以用join，如果被驱动表数据量很大，join_buffer放不下，此时会使用临时表，效率会降低
+* 如果驱动表数据量小时可以用join，如果驱动表数据量很大，join_buffer放不下，此时会使用临时表，效率会降低
   * 此时把这个join_buffer改为应用层的内存（应用层可以水平扩展无状态）
 * 如果使用了分页limit时，如果limit N,M，前面的N条数据会先被join但这数据又不用消耗的时间白白浪费
 * 就算被驱动表有索引，由于是树的数据结构，每行的时间复杂度是O(logN)，尽可能改为hash(8.0才支持)，通过应用层实现
 
 
 ## 使用建议
-* 连接被驱动表时需要满足索引，不然性能很差(虽然有BNL跟Hash Join优化，但是需要开辟一个新的内存空间而且还需要排序)
+* 连接被驱动表时需要满足索引查找（即Explain中不要出现Block Nested Loop），不然性能很差(虽然有BNL跟Hash Join优化，但是需要开辟一个新的内存空间而且还需要排序)
 * 如果能在应用层join计算尽可能在应用层计算，因为支持水平扩展
 
 
@@ -38,5 +43,3 @@
 * 是否使用了错的索引: force index
 * 是否回表获取了不必要的数据且`行数据较大`: 修改索引(最左匹配原则，覆盖索引)
 
-## 45讲内容回顾
-#TODO
