--- a/doc/db/1.基础/1.基础概念.md
+++ b/doc/db/1.基础/1.基础概念.md
@@ -92,21 +92,29 @@
 1. Memory引擎（数据结构时数组，保存在内存他快但是无法持久化及不支持行锁），扫描时是查询数组，当需要有序时可以创建b-tree索引 （临时表可以使用Memory引擎其他场景还是使用innodb引擎）
 2. 主键自增id不一定连续 (插入时分配，回滚时不回收，因为回收导致数据顺序有问题), 批量插入时id的申请是通过批量申请多个，中间用不到可能就导致空洞
 3. insert A Select B 时， 会锁表B`行读锁`，还有表A的`表写锁` （由于行读锁扫描到才加锁，当还没扫描的行数据有另外一个session更新可以更新成功，但是由于mvvc的隔离级别，读到的数据还是之间的数据）
-4. 快速复制表 使用mysqldump方法把数据导出insert避免原表行锁。 使用ibd的方式（云服务无法直接操作）
-   * crate table r like t; //创建表r
-   * alter table r discard tablespace; //删除r的空间
-   * flush table t for export； //生成一个t.cfg文件  从flush table 到 unlock tables中间是会加锁的
-   * cp t.cfg r.cfg; cp t.ibd r.ibd; // 拷贝
-   * unlock tables; // c.cgf文件删除
-   * alter table r import tablespace; // r.ibd文件作为表r的新的表空间  这个时间也会较长
-5. grant授权语句（在磁盘user,db表更新，内存中找对象更新）， flush privileges语句会清空内存对象（手动操作表才要执行）
+4. 快速复制表 使用mysqldump方法把数据导出insert sql语句避免原表有影响（行锁即并发问题）。 使用ibd的方式（云服务无法直接操作）
+   * sql:    create table r like t; //创建表r
+   * sql:    alter table r discard tablespace; //删除r的空间
+   * sql:    flush table t for export; //生成一个t.cfg文件  从flush table 到 unlock tables中间是会对表t加锁的
+   * shell:  cp t.cfg r.cfg; cp t.ibd r.ibd // 拷贝
+   * shell:  chown -R mysql:mysql r.* // 设置权限
+   * sql:    unlock tables; // t.cgf文件删除
+   * sql:    alter table r import tablespace; // r.ibd文件作为表r的新的表空间  这个时间也会较长
+5. grant授权语句（在磁盘user,db等表更新，内存中找对象更新）， flush privileges语句会清空内存对象（手动操作表才要执行）
    * 全局权限: mysql.user表 &&  内存数组acl_users 。 创建连接会拷贝到自己的线程对象中 。 所以全局不对已经连接的有影响 （可能考虑到不会经常变动）
-   * db权限: mysql.db表 &&  内存数组acl_dbs。会影响已经存在的链接 （需要实时校验）
-   * 表权限及列权限： mysql.columns_priv表 && 内存的hash结构column_priv_hash 。会影响已经存在的链接 （需要实时校验）
+   * db权限: mysql.db表 &&  内存数组acl_dbs。会影响已经存在的连接 （需要实时校验）
+   * 表权限及列权限： mysql.columns_priv表 && 内存的hash结构column_priv_hash 。会影响已经存在的连接 （需要实时校验）
 6. 分区表。MDL锁力度大。
-   * 通用分区： MyISAM引擎：在server分区，所以会调用引擎获取所有分区的数据。如果超过open_file_limit会报错
-   * 本地分区：innodb引擎： 在innodb引擎层分区。只会打开实际需要访问的分区文件。
+   * 通用分区： MyISAM引擎： 在server分区，所以会调用引擎获取所有分区的数据。如果超过open_file_limit会报错
+   * 本地分区： innodb引擎： 在innodb引擎层分区。只会打开实际需要访问的分区文件。
+7. id用完会怎样
+   * `AUTH_INCREMENT自增id`表的自增id达到上限后，再申请时它的值就不会改变，进而导致继续插入数据时报主键冲突 的错误。 （2的32次方 -1） 
+   * `row_id`达到上限后，则会归0再重新递增，如果出现相同的row_id，后写的数据会覆盖之前的数据。（应该主动创建自增主键用完会主键冲突） （2的48次方 -1） 
+   * `Xid`只需要不在同一个binlog文件中出现重复值即可。虽然理论上会出现重复值，但是概率极小，可以忽略不计。 （2的64次方 -1）  `(Server层)`
+   * `InnoDB的max_trx_id` 递增值每次MySQL重启都会被保存起来，所以我们文章中提到的脏读 的例子就是一个必现的bug，好在留给我们的时间还很充裕。 （2的48次方 -1）` (innodb层)`
+   * `thread_id`是我们使用中最常见的，而且也是处理得最好的一个自增id逻辑了  （2的32次方 -1） 
 
+    
 ---
 
 ### 参数
