--- a/doc/db/1.基础/1.基础概念.md
+++ b/doc/db/1.基础/1.基础概念.md
@@ -139,7 +139,6 @@
 * binlog_group_commit_sync_no_delay_count: 代表积累多少次才调用fsync
 * innodb_thread_concurrency : 代表innodb并发查询，默认为0，表示不限制
 
-
 ### sql语句
 * select * from information_schema.innodb_trx where TIME_TO_SEC(timediff(now(),trx_started)) > 60; //检查长事务
 * show index from `table_name`; //查看索引信息
@@ -150,6 +149,11 @@
 * show processlist; //查看连接数据
 * SET optimizer_trace="enabled=on"; &&  select **** from `table_name`;   &&   SELECT * FROM information_schema.OPTIMIZER_TRACE;  //查看优化器信息
 * show slave status; //备库的状态
+* EXPLAIN ANALYZE select **** from `table_name` //查看执行计划（真实执行，如果update会回滚）
+  * Table scan on 表  					 	   //全表扫描（使用主键）
+  * Index scan on 表 using 索引  	           //索引扫描(区间查询)
+  * Index lookup on 表 using 索引              //索引扫描(等值查询)
+  * Index scan using 索引 (skip scan) on 表    //Using index for skip scan 8.0优化为了避免最左匹配原则无法使用索引的问题(通过索引找出前面的值，虽然会多少扫描但性能比全表快)
  
 ### 工具 
 1. mysqldump 数据导入导出
