--- a/doc/microservices/流量治理_限流.md
+++ b/doc/microservices/流量治理_限流.md
@@ -90,3 +90,50 @@
 3. 熔断：感知/监控下游的服务有问题时依旧还对下游的服务调用会加大下游服务的压力，同时当前服务也可能会受到影响。所以下游服务有问题次数超过阈值时，就应该不调用返回错误
 4. 降级：每次熔断错误都直接返回错误可能不太好，部分接口对于下游熔断错误不敏感的接口。可以返回一些默认值或是其他的值使之用户体验更好
 5. 限流: 某个接口调用次数较大，避免恶意请求或避免服务/接口不可用。拒绝一部分请求
+
+
+
+--------
+mini微服务kong网关里面是微服务内部开发
+php服务是外部服务，由外部团队提供
+java服务是外部服务，由外部团队提供
+
+
+负载均衡:  
+    反向代理(由于需要嵌入mysql查询，其他中间件查询所以需要自定义开发):
+        ---
+        集群A: mini微服务kong网关(负载均衡ip)     php服务(负载均衡ip)    java服务(负载均衡ip)    ======> 调用使用的是同个集群的其他服务
+                A微服务  =>  php服务(负载均衡ip)   =>   java服务(负载均衡ip)
+                php服务(负载均衡ip)  =>    A微服务    =>   java服务(负载均衡ip)
+                java服务(负载均衡ip) =>   A微服务  =>  php服务(负载均衡ip)
+        ---
+        集群B: mini微服务kong网关(负载均衡ip)     php服务(负载均衡ip)    java服务(负载均衡ip)    ======> 调用使用的是同个集群的其他服务
+                A微服务  =>  php服务(负载均衡ip)   =>   java服务(负载均衡ip)
+                php服务(负载均衡ip)  =>    A微服务    =>   java服务(负载均衡ip)
+                java服务(负载均衡ip) =>   A微服务  =>  php服务(负载均衡ip)
+
+反向代理:
+    判断走 
+        集群A负载均衡10.0.0.1:   kong网关10.0.0.1:8000   php服务10.0.0.1:8001   java服务10.0.0.1:8002
+        集群B负载均衡10.0.0.2:   kong网关10.0.0.2:8000   php服务10.0.0.2:8001   java服务10.0.0.2:8002
+
+
+
+负载均衡 根据域名判断
+      mini微服务:  反向代理mini
+                        kong网关10.0.0.1:8000
+                        kong网关10.0.0.2:8000
+      php服务   :  反向代理php
+                        php服务10.0.0.1:8001
+                        php服务10.0.0.2:8001
+      java服务  :  反向代理java
+                        java服务10.0.0.1:8002
+                        java服务10.0.0.2:8002
+
+
+负载均衡1 提供给外部使用 —————— 指向go开发的反向代理 （就是公有云的功能（只支持权重），但是无法根据mysql等中间件判断细粒度的用户） 把原本的负载均衡拆成两个实现
+      根据域名判断是具体服务，获取对应服务列表。同时判断转发哪个集群。最后进行转发 
+
+负载均衡2 提供给内部部使用 —————— 这里可以使用kong内部的负载均衡功能
+    负载均衡A-B(集群A) 提供内内部使用，各个服务多台服务组成  
+    负载均衡a-b(集群B) 提供内内部使用，各个服务多台服务组成  
