--- a/doc/db/1.基础/1.基础概念.md
+++ b/doc/db/1.基础/1.基础概念.md
@@ -66,6 +66,33 @@
 2. 在连接时从库把本地的`GTID`集合发给主库，与主库的`GITD`集合求差集，这样就知道从库还有什么`GTID`未被同步，根据binlog的事件头部`GTID`就知道哪些binlog可以忽略，哪些binlog需要执行
 
 
+### 主从同步
+* 异步复制
+  * master两阶段提交binlog及redo log后视为成功，返回客户端
+    * 主库： SHOW VARIABLES LIKE 'rpl_semi_sync_master_enabled'; == OFF
+    * 主库： SHOW STATUS LIKE 'rpl_semi_sync_master_status'; == OFF
+    * 从库： SHOW VARIABLES LIKE 'rpl_semi_sync_slave_enabled'; == OFF
+    * 从库： SHOW STATUS LIKE 'Rpl_semi_sync_slave_status';  == OFF
+* 半同步复制
+  * master两阶段提交binlog及redo log后，slave接收到binlog（io线程获取，写入relay log）时视为成功，返回给客户端
+    * 主库： SHOW VARIABLES LIKE 'rpl_semi_sync_master_enabled'; == ON
+    * 主库： SHOW STATUS LIKE 'rpl_semi_sync_master_status'; == ON
+    * 从库： SHOW VARIABLES LIKE 'rpl_semi_sync_slave_enabled'; == ON
+    * 从库： SHOW STATUS LIKE 'Rpl_semi_sync_slave_status';  == ON
+    * 检查插件是否加载 SELECT PLUGIN_NAME,PLUGIN_STATUS FROM INFORMATION_SCHEMA.PLUGINS WHERE PLUGIN_NAME LIKE 'rpl_semi_sync%';
+      1. INSTALL PLUGIN rpl_semi_sync_master SONAME 'semisync_master.so'; 
+      2. INSTALL PLUGIN rpl_semi_sync_slave SONAME 'semisync_slave.so';
+* 组复制
+  * 采用paxos或raft一致性协议，多个实例组成，当进过多半数确认则认为成功，返回给客户端（单主模式，多主模式）
+    * SELECT VARIABLE_VALUE FROM PERFORMANCE_SCHEMA.global_variables WHERE VARIABLE_NAME='group_replication_group_name'; //组复制名称
+    * SHOW STATUS LIKE 'group_replication%'; //查看组复制的当前状态
+      * group_replication_primary_member 主要节点（单主模式）
+      * group_replication_member_state  成员状态 (ONLINE节点正常,RECOVERING节点正在恢复,ERROR节点异常)
+    * SELECT * FROM performance_schema.replication_group_members;
+      * MEMBER_ID组成员ID   MEMBER_HOST组成员IP地址   MEMBER_STATE当前状态(ONLINE/RECOVERING/ERROR)  MEMBER_ROLE角色(PRIMARY/SECONDARY)
+    * 检查插件是否加载 SELECT PLUGIN_NAME,PLUGIN_STATUS FROM INFORMATION_SCHEMA.PLUGINS WHERE PLUGIN_NAME='group_replication';
+
+
 ### 读写分离数据一致问题
 1. 强制读主库方案 （从业务入手 ———— 判断哪些业务适合读从库，哪些业务时读主库）
 2. sleep方案 （从业务入手 ———— 插入更新操作返回新数据，或从交互方式延迟请求）
