--- a/doc/db/1.基础/1.基础概念.md
+++ b/doc/db/1.基础/1.基础概念.md
@@ -171,17 +171,33 @@
 * show index from `table_name`; //查看索引信息
 * analyze table `table_name`; //重新计算统计信息
 * alter table `table_name` engine=InnoDB; //重建表
-* optimize table `table_name`; //  analyze table table_name  + alter table table_name engine=InnoDB
-* show table status; //查看表信息(这是预估统计)
-* show processlist; //查看连接数据
-* SET optimizer_trace="enabled=on"; &&  select **** from `table_name`;   &&   SELECT * FROM information_schema.OPTIMIZER_TRACE;  //查看优化器信息
-* show slave status; //备库的状态
-* EXPLAIN ANALYZE select **** from `table_name` //查看执行计划（真实执行，如果update会回滚）
-  * Table scan on 表  					 	   //全表扫描（使用主键）
-  * Index scan on 表 using 索引  	           //索引扫描(区间查询)
-  * Index lookup on 表 using 索引              //索引扫描(等值查询)
-  * Index scan using 索引 (skip scan) on 表    //Using index for skip scan 8.0优化为了避免最左匹配原则无法使用索引的问题(通过索引找出前面的值，虽然会多少扫描但性能比全表快)
- 
+* optimize table `table_name`; //  analyze table `table_name`  + alter table `table_name` engine=InnoDB
+* show master status; //主库的状态
+* show slave status;  //备库的状态
+* show table status;  //查看表信息(这是预估统计)
+* show processlist;   //查看连接数据
+* SET optimizer_trace="enabled=on"; &&  select * from `table_name`;   &&   SELECT * FROM information_schema.OPTIMIZER_TRACE;  //查看优化器信息
+  * steps.join_optimization.steps.rows_estimation  // 行数估算
+    * potential_range_indexes //索引使用情况分析
+    * group_index_range //group分组情况
+    * skip_scan_range  //skip scan使用情况
+    * analyzing_range_alternatives //分析索引替换方案
+  * steps.join_optimization.steps.filesort_summary
+    * num_initial_chunks_spilled_to_disk //使用了N个磁盘文件排序
+* EXPLAIN ANALYZE select * from `table_name` //查看执行计划（真实执行，如果update会回滚）
+  * scan
+    * Table scan on 表  					 	 //全表扫描(使用主键)
+    * Index scan on 表 using 索引  	             //索引扫描(区间查询)
+    * Index lookup on 表 using 索引               //索引扫描(等值查询)
+    * Index skip scan using on 表 using 索引      //Using index for skip scan 8.0优化为了避免最左匹配原则无法使用索引的问题(通过索引找出前面的值，虽然会多少扫描但性能比全表快)
+  * other   
+    * filter 筛选
+    * temporary/materialize 使用临时表（可能是内存可能是磁盘）
+    * aggregate 聚合 group by, distinct
+    * order 排序 
+      1. priority queue 优先队列排序(堆排)  —————— 使用limit 
+      2. qsort 快排 ————— 内存排序 sort_buffer_size小于 
+      3. merge sort 归并排序—————— 使用了文件(各自排自己的最后合并排) sort_buffer_size超过
 ### 工具 
 1. mysqldump 数据导入导出
 ```
