--- a/doc/db/2.应用/3.性能优化.md
+++ b/doc/db/2.应用/3.性能优化.md
@@ -13,15 +13,14 @@
 ## mysql优化
 1. 设置semi-sync半同步(保证从库尽可能的同步到数据，但不需要全部从节点都同步成功才提交)
 2. double write buffer。写入磁盘之前会首先将其写入一个双写缓冲区。这个缓冲区的作用是提供一个额外的保护层，确保`数据页`在数据库崩溃或系统故障时数据不会丢失或损坏
-3. group commit (百度查询) binlog, redo log等
+3. group commit binlog, redo log等
 4. MySQL5.6之后 RR隔离级别，binlog_row_image=full （当事务内更新一行数据时发现与库里数据一致时就不更新，导致后面的读还是事务开始视图的值） 需要改为binlog_row_image=minimal
 5. AHI 自适应HASH算法。对于频繁使用的数据建立hash索引可快速查找
 6. change buffer 对二级索引进行更新，此时这个索引页不在内存中，那么久不用那么着急去更新，先写到change buffer中，等到后续获取二级索引时再刷脏页（如果写完马上读的这种效果就很差）
 7. LRU 优化3/8 分为young,old块 (避免一些临时数据获取的数据落入young中,在old中再次访问再考虑到young区,如果两个大表NLJ可能会把数据放到young页)
 8. innodb_io_capacity 用来设置系统每秒能够执行的 I/O 操作数的上限(太小机器性能过剩，太大认为系统处理能力强innodb会把刷盘刷脏页的频率提高但系统处理不来)。
 9. time_zone=+8:00 或UTC或cached (默认是system此时系统读很慢)
-10. skip_name_resolve 如果ip访问时还反查域名，明确ip访问设置禁用
-11. 
+10. skip_name_resolve 如果ip访问时还反查域名，明确ip访问设置禁用 
 
 
 ## 应用层优化
@@ -34,3 +33,28 @@
    * 同步: redis se
 6. 读写分离
 7. 分表分库，分布式数据库
+
+
+## SQL分析
+* SET optimizer_trace="enabled=on"; &&  select * from `table_name`;   &&   SELECT * FROM information_schema.OPTIMIZER_TRACE;  //查看优化器信息
+   * steps.join_optimization.steps.rows_estimation  // 行数估算
+      * potential_range_indexes //索引使用情况分析
+      * group_index_range //group分组情况
+      * skip_scan_range  //skip scan使用情况
+      * analyzing_range_alternatives //分析索引替换方案
+   * steps.join_optimization.steps.filesort_summary
+      * num_initial_chunks_spilled_to_disk //使用了N个磁盘文件排序
+* EXPLAIN ANALYZE select * from `table_name` //查看执行计划（真实执行，如果update会回滚）
+   * scan
+      * Table scan on 表  					 	 //全表扫描(使用主键)
+      * Index scan on 表 using 索引  	             //索引扫描(区间查询)
+      * Index lookup on 表 using 索引               //索引扫描(等值查询)
+      * Index skip scan using on 表 using 索引      //Using index for skip scan 8.0优化为了避免最左匹配原则无法使用索引的问题(通过索引找出前面的值，虽然会多少扫描但性能比全表快)
+   * other
+      * filter 筛选
+      * temporary/materialize 使用临时表（可能是内存可能是磁盘）
+      * aggregate 聚合 group by, distinct
+      * order 排序
+         1. priority queue 优先队列排序(堆排)  —————— 使用limit
+         2. qsort 快排 ————— 内存排序 sort_buffer_size小于
+         3. merge sort 归并排序—————— 使用了文件(各自排自己的最后合并排) sort_buffer_size超过
