langGraph && akshare tool

--- a/doc/db/1.基础/1.基础概念.md
+++ b/doc/db/1.基础/1.基础概念.md
@@ -82,7 +82,7 @@
     * 检查插件是否加载 SELECT PLUGIN_NAME,PLUGIN_STATUS FROM INFORMATION_SCHEMA.PLUGINS WHERE PLUGIN_NAME LIKE 'rpl_semi_sync%';
       1. INSTALL PLUGIN rpl_semi_sync_master SONAME 'semisync_master.so'; 
       2. INSTALL PLUGIN rpl_semi_sync_slave SONAME 'semisync_slave.so';
-* 组复制
+* 组复制MGR
   * 采用paxos或raft一致性协议，多个实例组成，当进过多半数确认则认为成功，返回给客户端（单主模式，多主模式）
     * SELECT VARIABLE_VALUE FROM PERFORMANCE_SCHEMA.global_variables WHERE VARIABLE_NAME='group_replication_group_name'; //组复制名称
     * SHOW STATUS LIKE 'group_replication%'; //查看组复制的当前状态
