--- a/doc/db/3.分库分表/2.分库及分布式数据库.md
+++ b/doc/db/3.分库分表/2.分库及分布式数据库.md
@@ -183,7 +183,9 @@ XA COMMIT 'xxxxxx11111';
     3. 读请求时先从内存结构中(memtable)获取，如果找不到从磁盘上的SSTable中查找
   * 合并策略( 周期性触发的，可以基于时间、SSTable数量、大小等因素)
     * Tiered: 将所有的SSTable合并，性能差
-    * Leveled: 分层的概念将数据分成一些列Key互不重叠且固定大小的SSTable，每次Compact只处理少量SSTable文件，性能好
+    * Leveled: 分层的概念将数据分成一些列Key互不重叠且固定大小的SSTable，每次Compact只处理少量SSTable文件，性能好。但是多个level可能存在相同key
+      * 可能会有合并放大的问题。如level0触发合并到下一等级level1的合并，level1的合并又触发到level2的合并，以此类推
+      * 由于同一个level是有序且唯一的，上一level的到这个level的合并，可能会有触发整个level的数据合并（因为需要有序）
   * 与mysql的区别
     1. B+树刷脏页时是先加载到内存中然后进行合并数据在刷到磁盘(内存+磁盘)，优化读操作 , 
     2. LSM-Tree是把SSTable进行合并数据(磁盘+磁盘)，优化写操作, 
