--- a/doc/db/3.分库分表/2.分库及分布式数据库.md
+++ b/doc/db/3.分库分表/2.分库及分布式数据库.md
@@ -180,7 +180,8 @@ XA COMMIT 'xxxxxx11111';
     2. 周期性的会将多个SSTable文件合并成一个大的SSTable(Compact操作)，目的是为了减少SSTable的数量，同时起到合并数据及减少加载SSTable的次数
        * 但是在合并过程中需要产生新的SSTable空间合并后删除旧的SSTable，对磁盘空间有影响
        * 同时需要有后台任务进行合并，此时会读放大。对CPU及内存有影响
-    3. 读请求时先从内存结构中(memtable)获取，如果找不到从磁盘上的SSTable中查找
+    3. 读请求时先从内存结构中(memtable)获取，如果找不到从磁盘上的SSTable中查找。（会考虑添加索引的方式优化查询性能）
+    4. LSM-Tree不适合更新跟删除的操作，适合频繁插入追加的操作(日志，监控类相关的)
   * 合并策略( 周期性触发的，可以基于时间、SSTable数量、大小等因素)
     * Tiered: 将所有的SSTable合并，性能差
     * Leveled: 分层的概念将数据分成一些列Key互不重叠且固定大小的SSTable，每次Compact只处理少量SSTable文件，性能好。但是多个level可能存在相同key
