--- a/doc/design_patterns/6.DDD/概念.md
+++ b/doc/design_patterns/6.DDD/概念.md
@@ -50,7 +50,16 @@ DDD
     从业务模型向微服务落地的过程，我们会将领域模型中的领域对象与代码模型中的代码对象建立映射关系
         将业务架构和系统架构进行绑定。当我们响应业务变化调整业务架构和领域模型时，系统架构也会发生调整，并同步建立新的映射关系
 
+-------------------------------------
 
+* 实体： 可以通过唯一标识符确定
+* 值对象： 没有唯一标识符，是实体的附属品，只能通过实体找到对应是值对象
+* 领域服务： 业务逻辑，垮了多个实体或一个实体不能满足所有的业务逻辑，处理实体之间的关系
+* 聚合： 规定了影响范围的边界，有一个唯一的入口(聚合根)
+    * 聚合领域服务，成为子领域服务（不同的子领域获取其他领域的也需要通过聚合根）
+    * 聚合子领域服务，成为一个大领域
+* 仓库： 负责存储相关的，为了防腐化层，解决内部数据获取变动不影响外部
+* 事件变动： 当某个事件触发影响到另一个变动，减少耦合及不影响当前的事件
 -------------------------------------
 
 领域：
