--- a/doc/db/3.分库分表/2.分库及分布式数据库.md
+++ b/doc/db/3.分库分表/2.分库及分布式数据库.md
@@ -77,6 +77,9 @@
      * try阶段先把数据进行预留锁定，预留锁定成功后执行本地事务
      * 然后执行confirm阶段，把预留锁定释放掉，更新到新的业务数据中
      * 如执行cancel阶段，把预留锁定的数据还原之前的业务数据中
+     * TCC需要注意空回滚跟倒悬的问题
+       * 空回滚： TCC回滚时因为网络原因Try失败、 其他子事务已经出错全局回滚 ———— 需要通过日志表检查是否已经Try成功
+       * 倒悬：由于可能网络原因Try一直阻塞直到超时此时返会给客户端（实际还没Try写入成功） Confirm/Cancel后变成了一次空转，后面Try才完成但后续已经没有Confirm/Cancel  ———— 需要通过日志表检查是否已经Confirm/Cancel成功
    * SAGA： 数据补偿来代替回滚（`用户代码层面`实现数据库回滚，可能会脏写需要加锁）——如阿里的`Seata`完成
      * 把一个大事务分解为可以交错运行的一系列子事务的集合。
      * 每个子事务都有对应的补偿动作（恢复原数据的sql）。
